Programming Languages/Hw2/part4/t47.output
running e2c
compiling the C generated code
t47.c: In function ‘main’:
t47.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t47.c:5:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t47.c:6:16: error: ‘bbbb’ undeclared (first use in this function)
 printf("%d\n", bbbb);
                ^
t47.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t47.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t47.c:10:16: error: ‘k’ undeclared (first use in this function)
 printf("%d\n", k + );
                ^
t47.c:10:20: error: expected expression before ‘)’ token
 printf("%d\n", k + );
                    ^
t47.c:11:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t47.c:15:2: error: expected expression before ‘=’ token
  = ;
  ^
t47.c:16:5: error: expected expression before ‘;’ token
 2 = ;
     ^
t47.c:18:2: error: expected expression before ‘=’ token
  = ;
  ^
t47.c:19:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t47.c:20:11: error: expected expression before ‘<=’ token
 while( -  <= 0){
           ^
t47.c:21:2: error: expected expression before ‘=’ token
  = ;
  ^
t47.c:22:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t47.c:24:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t47.c:27:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t47.c:28:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t47.c:29:9: error: expected expression before ‘;’ token
 2 = 2 + ;
         ^
t47.c:31:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t47.c:37:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t47.c:42:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
